<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.droidlogic.monkeytest.MainActivity" >



    <LinearLayout
        android:id="@+id/setting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/settingTextView"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/monkey_settings" />

        <Button
            android:id="@+id/button_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="4dp"
            android:text="@string/useDefault" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_below="@+id/setting_layout"
        android:background="#0099CC" />

    <RelativeLayout
        android:id="@+id/monkey_setting_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_layout" >

        <TableLayout
            android:id="@+id/table_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button_blacklist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blacklist" />
                <TextView
                    android:id="@+id/blacklist_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blacklist_file">
                 </TextView>
            </TableRow>
            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <Button
                    android:id="@+id/button_events"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/events_setting" />
                <TextView
                    android:id="@+id/events_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/events_string">
                 </TextView>
             </TableRow>
             <TableRow
                 android:id="@+id/tableRow5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
                 <Button
                     android:id="@+id/button_debugging"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/debugging_setting" />
                 <TextView
                     android:id="@+id/debugging_textview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/debugging_string">
                 </TextView>
                  <Button
                      android:id="@+id/button_log"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/log_setting" />
                  <TextView
                      android:id="@+id/log_textview"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/android_log">
                  </TextView>
              </TableRow>
          </TableLayout>
          <TextView
              android:id="@+id/monkey_cmd"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/show_cmd"
              android:layout_below="@+id/table_layout" >
          </TextView>

      </RelativeLayout>
      <RelativeLayout
          android:id="@+id/monkey_controlLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
          android:layout_below="@+id/monkey_setting_layout" >
          <TextView
              android:id="@+id/monkey_controlView"
              style="?android:attr/textAppearanceLarge"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="10dp"
              android:text="@string/monkey_control" />
          <View
              android:layout_width="fill_parent"
              android:layout_height="2dp"
              android:layout_marginLeft="6dp"
              android:layout_marginRight="6dp"
              android:layout_below="@+id/monkey_controlView"
              android:background="#0099CC" />
          <LinearLayout
              android:id="@+id/run_layout"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@id/monkey_controlView"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="10dp"
              android:orientation="vertical" >
            <Button
                android:id="@+id/button_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start" />

            <Button
                android:id="@+id/button_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop" />
        </LinearLayout>

        <TextView
            android:id="@+id/monkey_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:layout_below="@+id/run_layout">
         </TextView>
    </RelativeLayout>
</RelativeLayout>
