<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:gravity="center"
        android:padding="35dp"
        android:textSize="20sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/speed_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_text" />

            <EditText
                android:id="@+id/speed_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
              <TextView
                android:id="@+id/throttle_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/throttle_text" />

            <EditText
                android:id="@+id/throttle_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
              <TextView
                android:id="@+id/touch_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pct_touch" />

            <EditText
                android:id="@+id/touch_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
              <TextView
                android:id="@+id/motion_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pct_motion" />

            <EditText
                android:id="@+id/motion_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
              <TextView
                android:id="@+id/trackball_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pct_trackball" />

            <EditText
                android:id="@+id/trackball_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </TableRow>


        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
              <TextView
                android:id="@+id/nav_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pct_nav" />

            <EditText
                android:id="@+id/nav_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </TableRow>


        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
              <TextView
                android:id="@+id/majornav_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pct_majornav" />

            <EditText
                android:id="@+id/majornav_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </TableRow>

<!--
        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
              <TextView
                android:id="@+id/syskeys_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pct_syskeys" />

            <EditText
                android:id="@+id/syskeys_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
              <TextView
                android:id="@+id/appswitch_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pct_appswitch" />

            <EditText
                android:id="@+id/appswitch_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </TableRow>
-->
        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
              <TextView
                android:id="@+id/anyevent_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pct_anyevent" />

            <EditText
                android:id="@+id/anyevent_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </TableRow>
    </TableLayout>

</LinearLayout>
